crates/htui/tests/snapshots/backlog__detail_prompt.snap
---
source: crates/htui/tests/backlog.rs
expression: harness.render()
---
Platform · DESKTOP-HTUI · memory · 1 run
 1 Backlog
┌ Backlog (11) ───────────────────────────────────────┐┌ FEAT-1 ───────────────────────────────────┐
│▾ htui (8)                                           ││ Body Runs Graph Docs Notes Prompt Reqs    │
│  ANA-1    done               Data model, box regist…││template  prd v1                           │
│  ANA-2    open               Orchestrator step grap…││picker    n / p · 8 template(s)            │
│  CLEAN-1  failed             Drop the legacy markdo…││digest    a3cad86a286f7e936fb4b1457f8c92b71│
│  FEAT-1   in_progress        TUI scaffold           ││budget    120000 (project) · reserve 0.10 ·│
│  FEAT-2   blocked            Agent driver and chat …││tokens    1067 → 1067 · chars-v2           │
│  FEAT-3   queued             Postgres store and cac…││excerpts  builtin@1 · considered 0 · select│
│  FIX-1    closed             Terminal left raw afte…││roots     none · this project has no repo  │
│  TOOL-1   awaiting_approval  CI matrix for the thre…││                                           │
│▾ agy (3)                                            ││section                   before   after  s│
│  ANA-1    done               Prompt assembly survey ││template                     149     149  n│
│  FEAT-1   open               ACP transport upgrade  ││item                         570     570  n│
│  FIX-1    open               Session leak on cancel ││documents:plan                57      57  n│
│                                                     ││documents:prd                 52      52  n│
│                                                     ││upstream                      71      71  n│
│                                                     ││box                           80      80  n│
│                                                     ││skills                        88      88  n│
│                                                     ││                                           │
│                                                     ││skills    tests v1 · project · always → act│
│                                                     ││          rust-style v2 · project · always │
│                                                     ││                                           │
│                                                     ││notes     preview: the template is chosen b│
│                                                     ││          preview: documents are latest-per│
│                                                     ││          preview: the `summary` kind is ex│
│                                                     ││          preview: phase-level skills come │
└─────────────────────────────────────────────────────┘└───────────────────────────────────────────┘
q quit · Tab next tab · Shift+Tab previous tab · 1 select tab · ? help
