crates/htui/tests/snapshots/backlog__detail_runs.snap
---
source: crates/htui/tests/backlog.rs
expression: harness.render()
---
Platform · DESKTOP-HTUI · memory · 1 working · 1 waiting
 1 Backlog
┌ Backlog (11) ───────────────────────────────────────┐┌ FEAT-1 ───────────────────────────────────┐
│▾ htui (8)                                           ││ Body Runs Graph Docs Notes Prompt Reqs    │
│  ANA-1    done               Data model, box regist…││kind   status    box          started      │
│  ANA-2    open               Orchestrator step grap…││mode                          finished     │
│  CLEAN-1  failed             Drop the legacy markdo…││graph  done      DESKTOP-HTUI 09-02 08:00  │
│  FEAT-1   in_progress        TUI scaffold           ││manual                        09-02 12:00  │
│  FEAT-2   blocked            Agent driver and chat …││▸ 0.1   done       prd              —  1h00│
│  FEAT-3   queued             Postgres store and cac…││        approved   claude/sonnet           │
│  FIX-1    closed             Terminal left raw afte…││  1.1   done       plan           14k  1h00│
│  TOOL-1   awaiting_approval  CI matrix for the thre…││        approved   claude/sonnet           │
│▾ agy (3)                                            ││  2.1   done       implement        —  1h00│
│  ANA-1    done               Prompt assembly survey ││        approved   ~36k ! claude/opus      │
│  FEAT-1   open               ACP transport upgrade  ││  3.1   done       review           —  1h00│
│  FIX-1    open               Session leak on cancel ││        approved   agy/default             │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
│                                                     ││                                           │
└─────────────────────────────────────────────────────┘└───────────────────────────────────────────┘
q quit · Tab next tab · Shift+Tab previous tab · 1 select tab · ? help
